--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ragnarok Accounting Ledger</title>
-  <meta http-equiv="refresh" content="0; url=apps/accounting/index.html">
+  <title>Start Ledger App</title>
+  <meta http-equiv="refresh" content="0; url=Start%20Ledger%20App.html">
   <style>
     html, body { height: 100%; margin: 0; }
     body {
@@ -19,8 +19,8 @@
 </head>
 <body>
   <div>
-    Opening Ledger... If it doesn't open, click
-    <a href="apps/accounting/index.html">here</a>.
+    Start Ledger App... If it doesn't open, click
+    <a href="Start%20Ledger%20App.html">here</a>.
   </div>
 </body>
 </html>
